--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         
     </head>
     <body>
+        <!-- ================ Header section start here  -->
         <div class="header-section">
             <div class="header-contact">
                 <div class="container">
@@ -29,21 +30,40 @@
                 </div>
             </div>
             <div class="container">
-                <header class="header-box">
+                <header class="header-menu-box">
                     <div class="header-logo">
-                        <a style="text-decoration: none;" href="/"><h1 >Selim<span>.</span></h1></a>
+                        <a style="text-decoration: none;" href="/"><h1 class="text-main-logo">Selim<span class="logo-dot">.</span></h1></a>
                     </div>
                     <div class="header-link">
                         <ul>
                             <li><a href="/">Home</a></li>
-                            <li><a href="/about.html">About</a></li>
-                            <li><a href="/blog.html">Blog</a></li>
-                            <li><a href="/faq.html">Faq</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="#">Work</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </header>
             </div>
         </div>
+        <!-- ==================== Header section code end here  -->
+
+        <!-- Banner Section Start Here -------------- -->
+
+        <div class="banner-section">
+            <div class="container">
+                <div class="banner-contain">
+                    <h1>We Love To Build Web Apps|</h1>
+                    <p>Free Web Template by Selim</p>
+                    <button>Watch Video</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Banner Section End Here -------------- -->
+
+
+
     </body>
 </html>
